<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCuePlayer</string>
    <string name="artist">Artist: </string>
    <string name="title">Title: </string>
    <string name="duration">Duration: </string>
    <string name="startPosition">Start Position: </string>
    <string name="file">File: </string>
    <string name="album">Album: </string>
     <string name="id">Id: </string>

</resources>